-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u5, 7u15, 7u21, 7u25, 7u40
-
Component/s: client-libs
-
b110
-
windows_7
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8034673 | 7u65 | Artem Ananiev | P3 | Resolved | Fixed | b01 |
| JDK-8024347 | 7u60 | Alexander Zvegintsev | P3 | Closed | Fixed | b01 |
FULL PRODUCT VERSION :
java version " 1.7.0_25 "
Java(TM) SE Runtime Environment (build 1.7.0_25-b17)
Java HotSpot(TM) 64-Bit Server VM (build 23.25-b01, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.1.7601]
A DESCRIPTION OF THE PROBLEM :
When using FileDialog#setFile() with a long file name and then selecting a shorter file name in the dialog box subsequent #getFile() call returns a corrupted String consisting of the selected file plus parts of the string submitted to setFile.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
see: http://stackoverflow.com/questions/14972664/java-getfile-returns-incorrect-filename-after-using-setfile
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Filename selected in FileDialog dialog
ACTUAL -
Corrupted string consisting of selected file name of the string submitted to setFile
REPRODUCIBILITY :
This bug can be reproduced always.
java version " 1.7.0_25 "
Java(TM) SE Runtime Environment (build 1.7.0_25-b17)
Java HotSpot(TM) 64-Bit Server VM (build 23.25-b01, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.1.7601]
A DESCRIPTION OF THE PROBLEM :
When using FileDialog#setFile() with a long file name and then selecting a shorter file name in the dialog box subsequent #getFile() call returns a corrupted String consisting of the selected file plus parts of the string submitted to setFile.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
see: http://stackoverflow.com/questions/14972664/java-getfile-returns-incorrect-filename-after-using-setfile
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Filename selected in FileDialog dialog
ACTUAL -
Corrupted string consisting of selected file name of the string submitted to setFile
REPRODUCIBILITY :
This bug can be reproduced always.
- backported by
-
JDK-8034673 FileDialog getFile returns corrupted string after previous setFile
-
- Resolved
-
-
JDK-8024347 FileDialog getFile returns corrupted string after previous setFile
-
- Closed
-
-
JDK-8024349 FileDialog getFile returns corrupted string after previous setFile
-
- Closed
-