8021943: FileDialog getFile returns corrupted string after previous setFile

Reviewed-by: anthony, serb